<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutMode="clipBounds"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ownSectionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/abel"
                android:text="@string/your_recipes"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suggestedList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ownList"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownSectionHeader"
                tools:listitem="@layout/recipe_item" />

            <Button
                android:id="@+id/addNewBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/green_dark"
                android:onClick="startAddNewRecipeActivity"
                android:text="@string/add_new_recipe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emptyOwnListInfo" />

            <TextView
                android:id="@+id/mainHeaderText"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:fontFamily="cursive"
                android:text="@string/cookaid"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/suggestedSectionHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/abel"
                android:text="@string/suggested_recipes"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainHeaderDivider" />

            <View
                android:id="@+id/mainHeaderDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainHeaderText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggestedList"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suggestedSectionHeader"
                tools:listitem="@layout/recipe_item" />

            <View
                android:id="@+id/footerDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addNewBtn" />

            <TextView
                android:id="@+id/footerText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/created_by_kamil_nawrot_data_retrieved_from_themealdb_com"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/footerDivider" />

            <TextView
                android:id="@+id/emptyOwnListInfo"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@color/blue_light"
                android:paddingLeft="16dp"
                android:paddingTop="32dp"
                android:paddingRight="16dp"
                android:text="@string/nothing_here_find_some_favourite_recipes_or_create_your_own"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ownList" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>